# llm-gatekeeping

./: .dvcignore  .gitignore  CLAUDE.md  LICENSE  Makefile  PRD.md  README.md  STATUS.md  dag.dot  dvc.yaml  eda.ipynb  environment.yml  instructions.md  project_plan.md  pyproject.toml  pytest.ini  requirements.txt  run_inference.sh  run_llm.sh  run_llm_provider_refresh.sh  run_pipeline.sh  run_synth.sh  run_vllm_cpu_docker.sh
autoresearch/: Untitled  experiment.py  prepare.py  program.md  results.tsv  results_mar21.tsv  results_prerunner.tsx  runner.py
configs/: default.yaml
docs/: 2026-03-13_baseline_dataset_overlap.md  PIPELINE.md  deberta_debug.md  environment.md  escalating_model_lightgbm_comparison.md  escalating_model_logprob_features.md  escalating_model_threshold_sweep.md  merge_readiness_findings.md
interview_presentation/: deck.md  first_steps.md  make_plots.py  speaker_notes.md
notebooks/: colab_local_llm_classifier.ipynb  colab_train_deberta.ipynb  ea_notes.md  error_analysis.ipynb  error_analysis_current_status.executed.ipynb  error_analysis_current_status.ipynb  external_datasers_ea.ipynb  logprob_fp_analysis.ipynb  logprob_threshold_analysis.ipynb  roberta_finetune.ipynb
reports/: colab_handoff_validation.json  escalating_model_lightgbm_compare.md  escalating_model_poc.md  eval_external_deepset.md  eval_external_jackhhao.md  eval_external_safeguard.md  eval_external_spml.md  eval_report_hybrid.md  eval_report_llm.md  external_attack_novelty_analysis.md  fp_investigation_report.md  logprob_threshold_analysis_summary.md  margin_code_path.md  (+8 more)
(+213 files in other folders)
